--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- carousel -->
     <link rel="stylesheet" href="/assets/other/carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="/assets/other/carousel/owl.theme.default.min.css">
+    <!-- slick -->
+    <link rel="stylesheet" href="/slick/slick.css">
+    <link rel="stylesheet" href="/slick/slick-theme.css">
 </head>
 
 <body>
@@ -36,9 +39,17 @@
 
     <!-- mobile nav bar container-->
     <div class="nuone-mobile-top-bar">
-        <nav class="mb-top-nav">
+        <div class="mb-top-nav">
             <a href="#" class="mb-top-nav-logo">ND.</a>
             <img src="./assets/icons/mobile-menu-icon.png" alt="" class="mb-menu-btn">
+        </div>
+        <nav class="mob-nav-links">
+            <a href="#">Home</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Work Experience</a>
+            <a href="#">Social Media</a>
+            <a href="#">Work</a>
+            <a href="#">Contact</a>
         </nav>
     </div>
 
@@ -108,17 +119,118 @@
 
     <!-- technologies container -->
     <div class="nuone-tech-container">
-        <div class="techs owl-carousel">
-            <div class="tech tech-1">Davinci
-                Creative</div>
-            <div class="tech tech-2">Davinci
-                Creative</div>
-            <div class="tech tech-3">Davinci
-                Creative</div>
-            <div class="tech tech-4">Davinci
-                Creative</div>
+        <div class="techs">
+            <div class="tech tech-1">
+                <h2>Davinci<br> Creative</h2>
+                <h3>Graphic Designer |<br> Layouter</h3>
+                <h4>Dec 2016- Mar 2018</h4>
+            </div>
+            <div class="tech tech-2">
+                <h2>Davinci<br> Creative</h2>
+                <h3>Graphic Designer |<br> Layouter</h3>
+                <h4>Dec 2016- Mar 2018</h4>
+            </div>
+            <div class="tech tech-3">
+                <h2>Davinci<br> Creative</h2>
+                <h3>Graphic Designer |<br> Layouter</h3>
+                <h4>Dec 2016- Mar 2018</h4>
+            </div>
+            <div class="tech tech-4">
+                <h2>Davinci<br> Creative</h2>
+                <h3>Graphic Designer |<br> Layouter</h3>
+                <h4>Dec 2016- Mar 2018</h4>
+            </div>
+            <div class="tech tech-5">
+                <h2>Davinci<br> Creative</h2>
+                <h3>Graphic Designer |<br> Layouter</h3>
+                <h4>Dec 2016- Mar 2018</h4>
+            </div>
         </div>
     </div>
+
+    <!-- projects container -->
+    <div class="nuone-projects-container">
+        <h2>Recent <strong>Project</strong></h2>
+        <div class="projects">
+            <div class="project project-1">
+                <div class="project-img"></div>
+                <div class="project-txt">
+                    <h4>Project-1</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                </div>
+            </div>
+            <div class="project project-2">
+                <div class="project-img"></div>
+                <div class="project-txt">
+                    <h4>Project-2</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                </div>
+            </div>
+            <div class="project project-3">
+                <div class="project-img"></div>
+                <div class="project-txt">
+                    <h4>Project-3</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                </div>
+            </div>
+            <div class="project project-4">
+                <div class="project-img"></div>
+                <div class="project-txt">
+                    <h4>Project-4</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- dark container -->
+    <div class="nuone-dark-container">
+        <h2>The Web Developer</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum expedita cupiditate eveniet cum tempora
+            velit et veritatis laudantium placeat itaque.</p>
+        <div class="dark">
+            <div class="icon icon-1">
+                <div><img src="/assets/icons/image 4 (Traced).svg" alt=""></div>
+                <h4>LEADERSHIP</h4>
+                <p>If you’d like to talk about a project you want help with or need an</p>
+            </div>
+            <div class="icon icon-2">
+                <div><img src="/assets/icons/image 6 (Traced).svg" alt=""></div>
+                <h4>INTTEGRITY</h4>
+                <p>If you’d like to talk about a project you want help with or need an</p>
+            </div>
+            <div class="icon icon-3">
+                <div><img src="/assets/icons/image 7 (Traced).svg" alt=""></div>
+                <h4>TEAMWORK</h4>
+                <p>If you’d like to talk about a project you want help with or need an</p>
+            </div>
+            <div class="icon icon-4">
+                <div><img src="/assets/icons/image 5 (Traced).svg" alt=""></div>
+                <h4>INNOVATION</h4>
+                <p>If you’d like to talk about a project you want help with or need an</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- touch container -->
+    <div class="nuone-touch-container">
+        <div class="touch">
+            <h3>Whats Next ?</h3>
+            <h2>Lets work together</h2>
+            <p>If you’d like to talk about a project you want help with or need an advice about product design, just
+                drop me a message at <span>me.rahadiansyah@gmail.com</span> / whatsapp <span>082119044407</span>.
+                I’m currently Available for any design project. <span>Thankyou</span></p>
+            <button>Get in Touch</button>
+        </div>
+    </div>
+
+    <!-- footer container -->
+    <footer class="nuone-footer-container">
+        <div class="footer">
+            <h4>Developed by Nuwan Chandrasekara. | <span id="footerYear"></span></h4>
+            <span>Sri Lanka <img src="./assets/icons/sri-lanka.png" alt="sri lanka flag"></span>
+        </div>
+    </footer>
 
     <!-- whatsapp btn -->
     <div class="whatsapp-btn-container">
@@ -130,6 +242,7 @@
 
     <!-- javascript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="/slick/slick.min.js"></script>
     <script src="/assets/other/carousel/owl.carousel.min.js"></script>
     <script src="./javascript/app.js" defer></script>
 </body>
