--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         <div class="hero-overlay">
             <div class="hero">
                 <h1>NUWAN PRASAD.</h1>
-                <h2><span>Designing</span> with purpose <br>and precision</h2>
+                <h2><span>Developing</span> with purpose <br>and precision</h2>
                 <div class="hero-sub">
                     <div class="hero-sub-1 owl-carousel">
                         <div class="hero-sub-1-sec hero-sub-1-sec-1">
-                            <h5>Graphic Design</h5>
-                            <p>Graphic design is an applied art and profession that uses text and graphics to
-                                communicate visually.</p>
+                            <h5>Development</h5>
+                            <p>Web development is an applied art and profession that uses code and multimedia elements
+                                to create interactive experiences on the web.</p>
                         </div>
                         <div class="hero-sub-1-sec hero-sub-1-sec-2">
-                            <h5>Graphic Design</h5>
+                            <h5>Design</h5>
                             <p>Graphic design is an applied art and profession that uses text and graphics to
                                 communicate visually.</p>
                         </div>
@@ -93,11 +93,13 @@
         <div class="portfolio">
             <img src="/assets/images/portfolio-img.png" class="porfolio-image">
             <div class="portfolio-details">
-                <h3>Senior Designer Packaging Designer & UI/UX</h3>
-                <p>I am a Graphic Designer with more than 7 years of experience in the design industry. I have a strong
-                    educational background in graphic design and extensive experience in various aspects of design
-                    including packaging, branding, and UI/UX design. I strongly believe that good design should always
-                    consider the client's needs and objectives and pay attention to every detail with care.</p>
+                <h3>Fullstack Web Developer</h3>
+                <p>I have a strong educational background in computer science and web development, and extensive
+                    experience in various aspects of building and maintaining websites and web applications. This
+                    includes front-end development, back-end development, database design, and user interface/user
+                    experience (UI/UX) design. I strongly believe that good web development should always consider the
+                    client's needs and objectives, be user-friendly, and follow best practices for performance and
+                    security.</p>
                 <div class="pd-btns">
                     <a href="#" class="pd-cv-btn">Download CV</a>
                     <a href="#" class="pd-learn-btn">Learn more</a>
@@ -111,7 +113,7 @@
         <div class="work-exp">
             <div class="exp-det">
                 <h3>Work Experience</h3>
-                <p>This is my best working experience <span>for 7 years.</span></p>
+                <p>This is my best working experience <span>for 2 years.</span></p>
             </div>
             <img src="./assets/images/ipad-img.png" alt="" class="exp-img">
         </div>
@@ -217,9 +219,9 @@
         <div class="touch">
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
-            <p>If you’d like to talk about a project you want help with or need an advice about product design, just
-                drop me a message at <span>me.rahadiansyah@gmail.com</span> / whatsapp <span>082119044407</span>.
-                I’m currently Available for any design project. <span>Thankyou</span></p>
+            <p>If you’d like to talk about a project you want help with, just
+                drop me a message at <span>nuwanc.email@gmail.com</span> / whatsapp <span>0771234567</span>.
+                I’m currently Available for any dev project. <span>Thankyou</span></p>
             <button>Get in Touch</button>
         </div>
     </div>
