--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
             <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <span>nuwanc.email@gmail.com</span> / whatsapp <span>0771234567</span>.
+                drop me a message at <span>myemail@gmail.com</span> / whatsapp <span>0771234567</span>.
                 I’m currently Available for any dev project. <span>Thankyou</span></p>
             <button>Get in Touch</button>
         </div>
