--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <!-- footer container -->
     <footer class="nuone-footer-container">
         <div class="footer">
-            <h4>Developed by Nuwan Chandrasekara. | <span id="footerYear"></span></h4>
+            <h4>Developed by Nuwan PrasaD. | <span id="footerYear"></span></h4>
             <span>Sri Lanka <img src="./assets/icons/sri-lanka.png" alt="sri lanka flag"></span>
         </div>
     </footer>
