--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
             <div class="project project-1">
                 <div class="project-img"></div>
                 <div class="project-txt">
-                    <h4>Project-1</h4>
+                    <h4>Athlete 360</h4>
                     <p>Lorem ipsum dolor sit amet consectetur</p>
                 </div>
             </div>
             <div class="project project-2">
                 <div class="project-img"></div>
                 <div class="project-txt">
-                    <h4>Project-2</h4>
+                    <h4>Hotel Kingland</h4>
                     <p>Lorem ipsum dolor sit amet consectetur</p>
                 </div>
             </div>
