--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- portfolio container -->
     <div class="nuone-portfolio-container">
         <div class="portfolio">
-            <img src="/assets/images/portfolio-img.png" class="porfolio-image">
+            <img src="/assets/images/nuwan avatar.png" class="porfolio-image">
             <div class="portfolio-details">
                 <h3>Fullstack Web Developer</h3>
                 <p>I have a strong educational background in computer science and web development, and extensive
