--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- styles -->
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/responsive.css">
+    <link rel="icon" type="image/x-icon" href="/assets/images/nuwan-dev.png">
     <!-- carousel -->
     <link rel="stylesheet" href="/assets/other/carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="/assets/other/carousel/owl.theme.default.min.css">
