--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Fullstack Developer</title>
+    <title>Nuwan PrasaD. | Unleashing Web Potential: Full-Stack Development Services for Startups & Businesses</title>
+    <meta name="description"
+        content="Need a website that wows? Nuwan PrasaD, your full-stack secret weapon for driving conversions & engagement.">
     <!-- styles -->
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/responsive.css">
