--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuwan PrasaD | Full-Stack Development Services for Startups & Businesses | Unleashing Web Potential</title>
+    <title>Nuwan PrasaD | FullStack Development for Startups & Businesses</title>
     <meta name="description"
         content="Searching for an awe-inspiring website that captivates audiences? Look no further than Nuwan PrasaD, your go-to full-stack expert dedicated to crafting visually stunning and high-performing websites. With a meticulous eye for design and a deep understanding of cutting-edge technology, I specialize in creating web solutions that leave a lasting impression. From sleek aesthetics to seamless functionality, I harness the power of full-stack development to elevate your online presence. Trust in my expertise to drive meaningful conversions and boost engagement, tailoring solutions that align perfectly with your vision and business objectives. Elevate your brand and stand out in the digital landscape with a website that not only wows but also drives results. Get in touch today and let's transform your digital presence together.">
     <!-- styles -->
