--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="project project-3">
                 <div class="project-img"></div>
                 <div class="project-txt">
-                    <h4>Project-3</h4>
+                    <h4>Gym Web Frontend</h4>
                     <p>Lorem ipsum dolor sit amet consectetur</p>
                 </div>
             </div>
