--- a/index.html
+++ b/index.html
@@ -1,256 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuwan PrasaD | FullStack Development for Startups & Businesses</title>
-    <meta name="description"
-        content="Discover Nuwan PrasaD: your full-stack expert crafting visually stunning, high-performing websites. Specializing in sleek design, cutting-edge technology, and impactful solutions to elevate your online presence. Trust in my expertise to boost engagement and drive meaningful conversions. Let's transform your brand in the digital landscape. Get in touch today!">
-    <meta name="google-site-verification" content="KHnBc4hz1CBNx9dWfUa5lxrOUZOcLIi98_Au2OsNQh0" />
-    <!-- styles -->
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/responsive.css">
-    <link rel="icon" type="image/x-icon" href="/assets/images/nuwan-dev.png">
-    <!-- carousel -->
-    <link rel="stylesheet" href="/assets/other/carousel/owl.carousel.min.css">
-    <link rel="stylesheet" href="/assets/other/carousel/owl.theme.default.min.css">
-    <!-- slick -->
-    <link rel="stylesheet" href="/slick/slick.css">
-    <link rel="stylesheet" href="/slick/slick-theme.css">
+    <title>Page Not Found</title>
 </head>
-
 <body>
-    <!-- top nav bar container-->
-    <div class="nuone-top-nav-container">
-        <nav class="top-nav">
-            <a href="#" class="top-nav-logo">ND.</a>
-            <div class="top-nav-links">
-                <a href="#">Home</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Work Experience</a>
-                <a href="#">Social Media</a>
-                <a href="#">Work</a>
-                <a href="#">Contact</a>
-            </div>
-            <div class="whatsapp-container">
-                <a href="#" onclick="sayHi('Hi, I would like to know ')" class="top-nav-whatsapp"><img
-                        src="/assets/icons/whatsapp-white.png" alt="whatsapp logo"></a>
-                <div class="top-nav-whatsapp-txt">drop a messeage</div>
-            </div>
-        </nav>
-    </div>
-
-    <!-- mobile nav bar container-->
-    <div class="nuone-mobile-top-bar">
-        <div class="mb-top-nav">
-            <a href="#" class="mb-top-nav-logo">ND.</a>
-            <img src="./assets/icons/mobile-menu-icon.png" alt="" class="mb-menu-btn">
-        </div>
-        <nav class="mob-nav-links">
-            <a href="#">Home</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Work Experience</a>
-            <a href="#">Social Media</a>
-            <a href="#">Work</a>
-            <a href="#">Contact</a>
-        </nav>
-    </div>
-
-    <!-- hero container -->
-    <div class="nuone-hero-container">
-        <div class="hero-overlay">
-            <div class="hero">
-                <h1>NUWAN PRASAD.</h1>
-                <h2><span>Developing</span> with purpose <br>and precision</h2>
-                <div class="hero-sub">
-                    <div class="hero-sub-1 owl-carousel">
-                        <div class="hero-sub-1-sec hero-sub-1-sec-1">
-                            <h5>Development</h5>
-                            <p>Web development is an applied art and profession that uses code and multimedia elements
-                                to create interactive experiences on the web.</p>
-                        </div>
-                        <div class="hero-sub-1-sec hero-sub-1-sec-2">
-                            <h5>Design</h5>
-                            <p>Graphic design is an applied art and profession that uses text and graphics to
-                                communicate visually.</p>
-                        </div>
-                        <div class="hero-sub-1-sec hero-sub-1-sec-3">
-                            <h5>Graphic Design</h5>
-                            <p>Graphic design is an applied art and profession that uses text and graphics to
-                                communicate visually.</p>
-                        </div>
-                    </div>
-                    <div class="hero-sub-2">
-                        <h3>Scroll For More</h3>
-                        <img src="./assets/icons/arrow-down.png" alt="">
-                    </div>
-                </div>
-
-            </div>
-            <div class="hero-bottom"></div>
-        </div>
-    </div>
-
-    <!-- portfolio container -->
-    <div class="nuone-portfolio-container">
-        <div class="portfolio">
-            <img src="/assets/images/nuwan avatar.png" class="porfolio-image">
-            <div class="portfolio-details">
-                <h3>Fullstack Web Developer</h3>
-                <p>I have a strong educational background in computer science and web development, and extensive
-                    experience in various aspects of building and maintaining websites and web applications. This
-                    includes front-end development, back-end development, database design, and user interface/user
-                    experience (UI/UX) design. I strongly believe that good web development should always consider the
-                    client's needs and objectives, be user-friendly, and follow best practices for performance and
-                    security.</p>
-                <div class="pd-btns">
-                    <a href="#" class="pd-cv-btn">Download CV</a>
-                    <a href="#" class="pd-learn-btn">Learn more</a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- work experience container -->
-    <div class="nuone-work-exp-container">
-        <div class="work-exp">
-            <div class="exp-det">
-                <h3>Work Experience</h3>
-                <p>This is my best working experience <span>for 2 years.</span></p>
-            </div>
-            <img src="./assets/images/ipad-img.png" alt="" class="exp-img">
-        </div>
-    </div>
-
-    <!-- technologies container -->
-    <div class="nuone-tech-container">
-        <div class="techs">
-            <div class="tech tech-1">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
-                <h4>Dec 2016- Mar 2018</h4>
-            </div>
-            <div class="tech tech-2">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
-                <h4>Dec 2016- Mar 2018</h4>
-            </div>
-            <div class="tech tech-3">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
-                <h4>Dec 2016- Mar 2018</h4>
-            </div>
-            <div class="tech tech-4">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
-                <h4>Dec 2016- Mar 2018</h4>
-            </div>
-            <div class="tech tech-5">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
-                <h4>Dec 2016- Mar 2018</h4>
-            </div>
-        </div>
-    </div>
-
-    <!-- projects container -->
-    <div class="nuone-projects-container">
-        <h2>Recent <strong>Project</strong></h2>
-        <div class="projects">
-            <div class="project project-1">
-                <div class="project-img"></div>
-                <div class="project-txt">
-                    <h4>Athlete 360</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
-                </div>
-            </div>
-            <div class="project project-2">
-                <div class="project-img"></div>
-                <div class="project-txt">
-                    <h4>Hotel Kingland</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
-                </div>
-            </div>
-            <div class="project project-3">
-                <div class="project-img"></div>
-                <div class="project-txt">
-                    <h4>Gym Web Frontend</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
-                </div>
-            </div>
-            <div class="project project-4">
-                <div class="project-img"></div>
-                <div class="project-txt">
-                    <h4>Project-4</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- dark container -->
-    <div class="nuone-dark-container">
-        <h2>The Web Developer</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum expedita cupiditate eveniet cum tempora
-            velit et veritatis laudantium placeat itaque.</p>
-        <div class="dark">
-            <div class="icon icon-1">
-                <div><img src="/assets/icons/image 4 (Traced).svg" alt=""></div>
-                <h4>LEADERSHIP</h4>
-                <p>If you’d like to talk about a project you want help with or need an</p>
-            </div>
-            <div class="icon icon-2">
-                <div><img src="/assets/icons/image 6 (Traced).svg" alt=""></div>
-                <h4>INTTEGRITY</h4>
-                <p>If you’d like to talk about a project you want help with or need an</p>
-            </div>
-            <div class="icon icon-3">
-                <div><img src="/assets/icons/image 7 (Traced).svg" alt=""></div>
-                <h4>TEAMWORK</h4>
-                <p>If you’d like to talk about a project you want help with or need an</p>
-            </div>
-            <div class="icon icon-4">
-                <div><img src="/assets/icons/image 5 (Traced).svg" alt=""></div>
-                <h4>INNOVATION</h4>
-                <p>If you’d like to talk about a project you want help with or need an</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- touch container -->
-    <div class="nuone-touch-container">
-        <div class="touch">
-            <h3>Whats Next ?</h3>
-            <h2>Lets work together</h2>
-            <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <span>myemail@gmail.com</span> / whatsapp <span>0771234567</span>.
-                I’m currently Available for any dev project. <span>Thankyou</span></p>
-            <button>Get in Touch</button>
-        </div>
-    </div>
-
-    <!-- footer container -->
-    <footer class="nuone-footer-container">
-        <div class="footer">
-            <h4>Developed by Nuwan PrasaD. | <span id="footerYear"></span></h4>
-            <span>Sri Lanka <img src="./assets/icons/sri-lanka.png" alt="sri lanka flag"></span>
-        </div>
-    </footer>
-
-    <!-- whatsapp btn -->
-    <div class="whatsapp-btn-container">
-        <button onclick="sayHi('Hi, I would like to know ')" class="whatsapp-btn">
-            <img src="/assets/icons/whatsapp.png">
-        </button>
-    </div>
-
-
-    <!-- javascript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="/slick/slick.min.js"></script>
-    <script src="/assets/other/carousel/owl.carousel.min.js"></script>
-    <script src="./javascript/app.js" defer></script>
+   <div class="no-404">
+    <h1>That's an error!</h1>
+    <h2>404</h2>
+    <h3>Oops, the page your are looking for is not here.</h3>
+   </div> 
 </body>
-
 </html>
