--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Page Not Found</title>
 </head>
 <body>
-   <div class="no-404">
+   <div style="height:100vh; display: flex; justify-content: center; align-items: center;"
     <h1>That's an error!</h1>
     <h2>404</h2>
     <h3>Oops, the page your are looking for is not here.</h3>
