--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div style="height:100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; line-height: 0;">
+    <div
+        style="height:100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; line-height: 0;">
         <h1>404</h1>
         <h2>That's an error!</h2>
         <h3>Oops, the page your are looking for is not here.</h3>
