--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="top-nav-links">
                 <a href="#">Home</a>
                 <a href="#">Portfolio</a>
-                <a href="#">Work Experience</a>
-                <a href="#">Social Media</a>
                 <a href="#">Work</a>
+                <a href="#">Blog</a>
+                <a href="#">Social Media</a>
                 <a href="#">Contact</a>
             </div>
             <div class="whatsapp-container">
@@ -50,9 +50,9 @@
         <nav class="mob-nav-links">
             <a href="#">Home</a>
             <a href="#">Portfolio</a>
-            <a href="#">Work Experience</a>
-            <a href="#">Social Media</a>
             <a href="#">Work</a>
+            <a href="#">Blog</a>
+            <a href="#">Social Media</a>
             <a href="#">Contact</a>
         </nav>
     </div>
@@ -84,6 +84,7 @@
                     <div class="hero-sub-2">
                         <h3>Scroll For More</h3>
                         <img src="./assets/icons/arrow-down.png" alt="">
+                        <!-- <div class="hero-sub-scroll"></div> -->
                     </div>
                 </div>
 
@@ -224,7 +225,7 @@
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
             <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <span>myemail@gmail.com</span> / whatsapp <span>0771234567</span>.
+                drop me a message at <span>nuwanc@gmail.com</span> / whatsapp <span>+9477 293 8630</span>.
                 I’m currently Available for any dev project. <span>Thankyou</span></p>
             <button>Get in Touch</button>
         </div>
