--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="portfolio">
             <img src="/assets/images/nuwan avatar.png" class="porfolio-image">
             <div class="portfolio-details">
-                <h3>Fullstack Web Developer</h3>
+                <h3>The Web Developer</h3>
                 <p>I have a strong educational background in computer science and web development, and extensive
                     experience in various aspects of building and maintaining websites and web applications. This
                     includes front-end development, back-end development, database design, and user interface/user
@@ -128,28 +128,28 @@
     <div class="nuone-tech-container">
         <div class="techs">
             <div class="tech tech-1">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
+                <h2>VS<br> Code</h2>
+                <h3>Web Developer |<br> Programmer</h3>
                 <h4>Dec 2016- Mar 2018</h4>
             </div>
             <div class="tech tech-2">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
+                <h2>VS<br> Code</h2>
+                <h3>Web Developer |<br> Programmer</h3>
                 <h4>Dec 2016- Mar 2018</h4>
             </div>
             <div class="tech tech-3">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
+                <h2>VS<br> Code</h2>
+                <h3>Web Developer |<br> Programmer</h3>
                 <h4>Dec 2016- Mar 2018</h4>
             </div>
             <div class="tech tech-4">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
+                <h2>VS<br> Code</h2>
+                <h3>Web Developer |<br> Programmer</h3>
                 <h4>Dec 2016- Mar 2018</h4>
             </div>
             <div class="tech tech-5">
-                <h2>Davinci<br> Creative</h2>
-                <h3>Graphic Designer |<br> Layouter</h3>
+                <h2>VS<br> Code</h2>
+                <h3>Web Developer |<br> Programmer</h3>
                 <h4>Dec 2016- Mar 2018</h4>
             </div>
         </div>
@@ -225,7 +225,7 @@
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
             <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <span>nuwanc@gmail.com</span> / whatsapp <span>+9477 293 8630</span>.
+                drop me a message at <span>nuwanc@gmail.com</span> / whatsapp <span onclick="sayHi('Hi, I would like to know ')">+9477 293 8630</span>.
                 I’m currently Available for any dev project. <span>Thankyou</span></p>
             <button>Get in Touch</button>
         </div>
@@ -246,6 +246,13 @@
         </button>
     </div>
 
+    <!-- dev note -->
+    <div class="nuone-dev-note">
+        <div class="dev-note">
+            <h3>The site is undergoing a redesign phase, don't hesitate to <span onclick="sayHi('Hi, I would like to know ')" class="dev-note-sp" target="_blank" title="nuone whatsapp">get in touch with me</span> for any information!
+                Thank you. 😇</h3>
+        </div>
+    </div>
 
     <!-- javascript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
