--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
                     client's needs and objectives, be user-friendly, and follow best practices for performance and
                     security.</p>
                 <div class="pd-btns">
-                    <a href="#" class="pd-cv-btn">Download CV</a>
-                    <a href="#" class="pd-learn-btn">Learn more</a>
+                    <a href="mailto:nuwanc.email@gmail.com" class="pd-cv-btn">Email me</a>
+                    <a href="#" onclick="sayHi('Hi, I would like to know ')" class="pd-learn-btn">Learn more</a>
                 </div>
             </div>
         </div>
