--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
             <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <span>nuwanc@gmail.com</span> / whatsapp <span onclick="sayHi('Hi, I would like to know ')">+9477 293 8630</span>.
-                I’m currently Available for any dev project. <span>Thankyou</span></p>
-            <button>Get in Touch</button>
+                drop me a message at <a href="mailto:nuwanc.email@gmail.com" class="pd-cv-btn">nuwanc.email@gmail.com</a> / whatsapp <span onclick="sayHi('Hi, I would like to know ')">+9477 293 8630</span>.
+                I’m currently available for projects. <span>Thankyou</span></p>
+            <button onclick="sayHi('Hi, I would like to know ')">Get in Touch</button>
         </div>
     </div>
 
