--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <h3>Whats Next ?</h3>
             <h2>Lets work together</h2>
             <p>If you’d like to talk about a project you want help with, just
-                drop me a message at <a href="mailto:nuwanc.email@gmail.com" class="pd-cv-btn">nuwanc.email@gmail.com</a> / whatsapp <span onclick="sayHi('Hi, I would like to know ')">+9477 293 8630</span>.
+                drop me a message at <a href="mailto:nuwanchandrasekara99@gmail.com" class="pd-cv-btn">nuwanchandrasekara99@gmail.com</a> or whatsapp <span onclick="sayHi('Hi, I would like to know ')" style="cursor: pointer;">+9477 293 8630</span>.
                 I’m currently available for projects. <span>Thankyou</span></p>
             <button onclick="sayHi('Hi, I would like to know ')">Get in Touch</button>
         </div>
