removed inactive links from top navigation

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             <a href="#" class="top-nav-logo">ND.</a>
             <div class="top-nav-links">
                 <a href="#">Home</a>
-                <a href="#">Portfolio</a>
+                <!-- <a href="#">Portfolio</a> -->
                 <a href="#">Work</a>
-                <a href="#">Blog</a>
+                <!-- <a href="#">Blog</a> -->
                 <a href="#">Social Media</a>
                 <a href="#">Contact</a>
             </div>
@@ -49,9 +49,9 @@
         </div>
         <nav class="mob-nav-links">
             <a href="#">Home</a>
-            <a href="#">Portfolio</a>
+            <!-- <a href="#">Portfolio</a> -->
             <a href="#">Work</a>
-            <a href="#">Blog</a>
+            <!-- <a href="#">Blog</a> -->
             <a href="#">Social Media</a>
             <a href="#">Contact</a>
         </nav>
