--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h1>NUWAN PRASAD.</h1>
                 <h2><span>Developing</span> with purpose <br>and precision</h2>
                 <div class="hero-sub">
-                    <div class="hero-sub-1 owl-carousel">
+                    <!-- <div class="hero-sub-1 owl-carousel">
                         <div class="hero-sub-1-sec hero-sub-1-sec-1">
                             <h5>Development</h5>
                             <p>Web development is an applied art and profession that uses code and multimedia elements
@@ -80,7 +80,7 @@
                             <p>Graphic design is an applied art and profession that uses text and graphics to
                                 communicate visually.</p>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="hero-sub-2">
                         <h3>Scroll For More</h3>
                         <img src="./assets/icons/arrow-down.png" alt="">
